# ComicsBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_channel_table.rs  m20250823_124126_create_channel_provider_tables.rs
src/: config.rs  main.rs  periodic.rs  store.rs
src/bot/: admin.rs  comics_bot.rs  mod.rs
src/bot/admin/: helpers.rs  list_subscriptions.rs  mod.rs  update_now.rs
src/bot/channel_commands/: help.rs  helpers.rs  info.rs  list.rs  mod.rs  register.rs  subscribe.rs  unregister.rs  unsubscribe.rs
src/bot/commands/: mod.rs  start.rs
src/comics_providers/: cyanide_and_happiness.rs  mod.rs
src/db/: mod.rs
src/db/entities/: channel.rs  channel_comics_provider_subscription.rs  comics_provider.rs  mod.rs
