[package]
name = "comics-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
config-file = { version = "0.2.3", features = ["json"] }
log = "0.4.27"
once_cell = "1.21.3"
pretty_env_logger = "0.5.0"
sea-orm = { version = "1.1.13", features = ["macros", "runtime-async-std-native-tls", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.16.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
