[package]
name = "comics-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
config-file = { version = "0.2.3", features = ["json"] }
log = "0.4.27"
once_cell = "1.21.3"
persistent-kv = "1.0.2"
pretty_env_logger = "0.5.0"
reqwest = "0.12.22"
scraper = "0.23.1"
sea-orm = { version = "1.1.13", features = ["macros", "runtime-async-std-native-tls", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.2", features = ["derive"] }
teloxide = { version = "0.16.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
tokio_schedule = "0.3.2"
